fixed topbar not responsive on mobile device

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -19,8 +19,7 @@
             border-radius: 50%;
             display: flex;
             align-items: flex-end;
-            // justify-content: center;
-            // float: left;
+            justify-content: center;
             width: 250px;
             height: 250px;
             img {
