--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -2,7 +2,6 @@
 
 .topbar {
     width: 100%;
-    height: 70px;
     background-color: #fff;
     color: $mainColor;
     position: fixed;
@@ -11,15 +10,20 @@
     transition: all 1s ease-in-out;
 
     .wrapper {
-        padding: 10px 30px;
+        padding: 1em;
         display: flex;
         align-items: center;
         justify-content: space-between;
 
         .left{
             display: flex;
+            flex-direction: row;
             align-items: center;
-
+            @media screen and (max-width: 788px) {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+            }
             .logo{
                 font-size: 40px;
                 font-weight: 700;
@@ -29,8 +33,12 @@
 
             .itemContainer {
                 display: flex;
+                flex-direction: row;
                 align-items: center;
                 margin-left: 30px;
+                @media screen and (max-width: 788px) {
+                    margin-left: 0;
+            }
 
                 .icon{
                     font-size: 15px;
